# clap-layers

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  security.yml
crates/e2e/: Cargo.toml
crates/proc-macro/: Cargo.toml
crates/proc-macro/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/examples/: README.md  cli_only.rs  complete_example.rs  config_file.rs  debug_macro.rs  dynamic_values.rs  environment_vars.rs  precedence_demo.rs  quickstart.rs  sensitive_data.rs
crates/runtime/src/: __private.rs  lib.rs  source.rs
docs/: DESIGN.md
examples/: config.toml
