[workspace]
resolver = "2"
members = ["crates/proc-macro", "crates/runtime", "crates/e2e"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/jchultarsky/clap-layers"
homepage = "https://github.com/jchultarsky/clap-layers"
documentation = "https://docs.rs/clap-layers"

authors = ["Julian Chultarsky <jchultarsky@gmail.com>"]

[workspace.dependencies]
syn = { version = "3", features = ["full"] }
quote = "1"
proc-macro2 = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
toml = "1"
serde = { version = "1", default-features = false, features = ["std"] }

# Lints that are sensible for *every* target, tests and examples included.
# Library-only strictness (`forbid(unsafe_code)`, `deny(missing_docs)`,
# no-unwrap) lives at the crate roots instead, so it does not fire on test code
# that may legitimately unwrap or touch the process environment.
[workspace.lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
todo = "warn"
unimplemented = "warn"
# False positive for our layout: `readme = "../../README.md"` points outside the
# package, which this lint cannot see, but `cargo package` rewrites it to
# `readme = "README.md"` and ships the file. Verified against the built .crate.
cargo_common_metadata = "allow"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
