[package]
name = "clap-layers-proc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"

authors = ["Julian Chultarsky <jchultarsky@gmail.com>"]

description = "Proc-macro implementation for clap-layers"

keywords = ["clap", "config", "cli", "derive"]
categories = ["command-line-interface", "config"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
